feat:: 누락 테스트코드, 컨트롤러 추가